--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -1,5 +1,7 @@
 // Customize the colors of Octoflat Here
 
+
+$primary-color:      #e69411; // Jumbotron, Horizontal Rules, Headings
 $secondary-color:    #1dbbd6; // Tags, Links, Main Heading, Quote Border
 $tertiary-color:     #C0392B; // Hover-over color, Active Page color
 $accent-color1:      #23defe; // Hover-over background color for tags
