--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -1,16 +1,19 @@
 // Customize the colors of Octoflat Here
 
 
-$primary-color:      #e69411; // Jumbotron, Horizontal Rules, Headings
-$secondary-color:    #1dbbd6; // Tags, Links, Main Heading, Quote Border
-$tertiary-color:     #C0392B; // Hover-over color, Active Page color
-$accent-color1:      #23defe; // Hover-over background color for tags
+//$primary-color:      #e69411; // Jumbotron, Horizontal Rules, Headings
+$primary-color:      #000000; // Jumbotron, Horizontal Rules, Headings
+//$secondary-color:    #1dbbd6; // Tags, Links, Main Heading, Quote Border
+$secondary-color:    #c04543; // Tags, Links, Main Heading, Quote Border
+//$tertiary-color:     #C0392B; // Hover-over color, Active Page color
+$tertiary-color:     #ae3f3a; // Hover-over color, Active Page color
+//$accent-color1:      #23defe; // Hover-over background color for tags
+$accent-color1:      #050c0e; // Hover-over background color for tags
 $accent-color2:      #34495E; // Sub-headings, Date Stamp
 $accent-color3:      #ffffff; // Navbar Text, Tag text
-$bg-color:           #ffffff; // Background
-$navbar-color:       #1ec2de; // Navbar
-$code-bg-color:      #2C3E50; // Code background
+$bg-color:           #fafafa; // Background
+$navbar-color:       #050c0e; // Navbar
+$code-bg-color:      #000000; // Code background
 $quote-color:        #E74C3C; // Quote Color
 $text-color:         #5a5e5f; // Body Text
 $footer-color:       #7F8C8D; // Footer
-
