post - pppoe on virt box

--- a/sass/_flat-ui.scss
+++ b/sass/_flat-ui.scss
@@ -85,7 +85,7 @@
   content: "\e012"; }
 
 .fui-bubble-16:before {
-  content: "\e013"; 
+  content: "\e013";
   color: $secondary-color;}
 
 @font-face {
@@ -179,7 +179,7 @@
 body {
   color: $text-color;
   background: $bg-color;
-  font: 18px/1.831 "Open Sans", sans-serif; }
+  font: 18px/1.831 "PT Sans", sans-serif; }
 
 p {
   font-weight: 300; }
@@ -199,8 +199,10 @@ a {
 h1 {
   color: $primary-color;
   font-size: 32px;
-  font-weight: 900; 
-  font-family: "Quicksand"; }
+  font-weight: 900;
+  font-family: "Ubuntu"; }
+
+
   .date-time{
     font-size: 15px;
     color: $accent-color2;
@@ -577,8 +579,8 @@ h6 {
     .navbar .nav > li > ul li ul {
       left: 100%; }
   .navbar .nav > li > a {
-    padding: 15px 15px 17px; 
-    margin-top: 4px; 
+    padding: 15px 15px 17px;
+    margin-top: 4px;
     border-radius: 5px;
     -moz-border-radius: 5px; }
     .navbar .nav > li > a:hover {
@@ -647,7 +649,7 @@ h6 {
   background: $navbar-color;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
 .navbar-inverse .nav > li > a {
-  color: $accent-color3; 
+  color: $accent-color3;
   font-weight: 300; }
 .navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus {
   background-color: transparent;
@@ -2629,7 +2631,7 @@ hr { display: block; height: 1px;
 }
 
 a > .badge {
-  color: $accent-color3;  
+  color: $accent-color3;
   -webkit-transition: 0.25s;
   -moz-transition: 0.25s;
   -o-transition: 0.25s;
