added thrift communication post

--- a/sass/_flat-ui.scss
+++ b/sass/_flat-ui.scss
@@ -200,7 +200,7 @@ h1 {
   color: $primary-color;
   font-size: 32px;
   font-weight: 900;
-  font-family: "Ubuntu"; }
+  font-family: "Arvo"; }
 
 
   .date-time{
@@ -224,7 +224,7 @@ h3 {
   color: $accent-color2;
   font-size: 24px;
   font-weight: 500;
-  font-family: "Quicksand";
+  font-family: "Arvo";
   margin-bottom: 4px;
   margin-top: 2px; }
   .tagline
@@ -2581,7 +2581,7 @@ body.vjs-full-window {
 .jumbotron {
   font-size: 60px;
   line-height: 70px;
-  font-family: "Quicksand";
+  font-family: "Arvo";
   position: relative;
   padding: 70px 0;
   color: $primary-color; }
