--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -5,6 +5,6 @@
 $sans: "Optima", sans-serif;
 $serif: "Libre Baskerville", serif;
 $mono: "Courier", monospace;
-$heading-font-family: "Indie Flower", sans-serif;
-$header-title-font-family: "Cabin", sans-serif;
-$header-subtitle-font-family: "Cabin", sans-serif;
+$heading-font-family: "Arvo", sans-serif;
+$header-title-font-family: "Arvo", sans-serif;
+$header-subtitle-font-family: "Arvo", sans-serif;
