post on mb HA support in PCA

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -46,8 +46,11 @@ blockquote{
     color:#999;
 }
 
-code{
+p code, li code{
     font-family: 'Source Code Pro' ;
+    font-size: 12px;
+    background: #eee;
+    border-radius: 2px;
 }
 
 body{
