--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -4,18 +4,34 @@ h1{
     font-size:2em;
 }
 
+a{
+    color: #333;
+}
+
+a:visited{
+    color: #333;
+}
+
+.entry-content a{
+    text-decoration: none;
+    border-bottom: 2px solid #888;
+    padding-bottom: 1px;
+}
+
 a:hover{
-    text-shadow:0px 0px 6px rgba(30,30,30,0.4);
+    color: #333;
 }
 
 .entry-title{
     color:black;
-    text-shadow:0px 0px 6px rgba(30,30,30,0.4);
-    font-size:2.1em;
+    font-family: "medium-content-sans-serif-font","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+    font-size:52px;
+    font-weight: 700;
+    color: rgba(0,0,0,0.8);
 }
 
 .entry-title a:hover{
-    color: #660000;
+    color: black
 }
 
 article p{
@@ -47,10 +63,12 @@ blockquote{
 }
 
 p code, li code{
-    font-family: 'Source Code Pro' ;
-    font-size: 12px;
+    font-family: 'Ubuntu Mono' ;
+    font-size: 13px;
     background: #eee;
-    border-radius: 2px;
+    border-radius: 5px;
+    padding-left: 6px;
+    padding-right: 6px;
 }
 
 body{
@@ -68,4 +86,16 @@ body>nav ul{
 
 body>header h2{
     width:500px;
+}
+
+.entry-content{
+    font-family: "medium-content-sans-serif-font","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.entry-title a, .entry-title, .entry-title a:hover, .entry-title a:visited{
+    color: #333;
 }
