Changed title hover color, FINALLYrake deploy!

--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -2,8 +2,8 @@ $noise-bg: image-url('site-background.png') top left !default;
 $img-border: #666;
 
 // Main Link Colors
-$link-color: darken(#F00, 10) !default;
-$link-color-hover: desaturate(darken($link-color, 30), 10) !default; // darken(#F00, 25) -- desaturate(darken($link-color, 40), 25) 
+$link-color: darken(#333, 10) !default;
+$link-color-hover: desaturate(darken($link-color, 30), 10) !default; // darken(#F00, 25) -- desaturate(darken($link-color, 40), 25)
 $link-color-visited: desaturate(lighten($link-color, 15), 60) !default;
 $link-color-active: $link-color-visited !default;
 
