--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -4,7 +4,7 @@
 
 $sans: "Optima", sans-serif;
 //$serif: "Slabo 27px", serif;
-$mono: "Ubuntu Mono", monospace;
+$mono: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 //$heading-font-family: "Verdana", sans-serif;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
