--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
-  <h2>{{ site.title }}</h2>
+  <a href="/"><h2>{{ site.title }}</h2></a>
   {% if site.subtitle %}
     <h1>{{ site.subtitle }}</h1>
   {% endif %}
