--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,11 @@
   background: var(--light-anti-theme);
 }
 
+.home pre {
+  font-size: 10px;
+  font-family: monospace;
+}
+
 .markdown-body {
   font-family: "Droid Sans", sans-serif;
 }
