--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,9 @@
   margin-top: 20px;
   margin-bottom: 50px;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
 }
 
 .markdown-body {
