--- a/css/light.css
+++ b/css/light.css
@@ -226,11 +226,16 @@
 *
 */
 .theme-light .markdown-body code {
-  /* border: 1px solid var(--light-background); */
-  /* background: var(--light-background-contrast); */
+  border: 1px solid var(--light-background);
+  background: var(--light-background-contrast);
   border-radius: 0px;
   padding-top: 1px;
   padding-bottom: 1px;
+}
+
+.theme-light .highlight code {
+  border: 0px !important;
+  background-color: unset;
 }
 
 .theme-light .markdown-body .highlight pre,
